FB-15 | Service | Implement feature and test for find product category rest api service adapter
