# farm-byte-service/catalog/catalog-adapter/catalog-adapter-rest-api/src/main/java/cm/xenonbyte/farmbyte/catalog/adapter/rest/api/product/ProductCategoryRestApi.java
@@ -1,9 +1,12 @@
 package cm.xenonbyte.farmbyte.catalog.adapter.rest.api.product;
 
 import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.productcategory.ProductCategoriesApi;
-import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.productcategory.view.ApiSuccessResponse;
+import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.productcategory.view.CreateProductCategoryViewApiResponse;
 import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.productcategory.view.CreateProductCategoryViewRequest;
 import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.productcategory.view.CreateProductCategoryViewResponse;
+import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.productcategory.view.FindProductCategoriesViewApiResponse;
+import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.productcategory.view.FindProductCategoryByIdViewApiResponse;
+import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.productcategory.view.SearchProductCategoriesViewApiResponse;
 import cm.xenonbyte.farmbyte.common.adapter.api.messages.MessageUtil;
 import jakarta.annotation.Nonnull;
 import org.springframework.http.ResponseEntity;
@@ -13,6 +16,7 @@ import java.time.ZonedDateTime;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
+import java.util.UUID;
 
 import static cm.xenonbyte.farmbyte.common.adapter.api.constant.CommonAdapterRestApi.BODY;
 import static org.springframework.http.HttpStatus.CREATED;
@@ -34,11 +38,11 @@ public class ProductCategoryRestApi implements ProductCategoriesApi {
     }
 
     @Override
-    public ResponseEntity<ApiSuccessResponse> createProductCategory(String acceptLanguage, CreateProductCategoryViewRequest createProductCategoryViewRequest) {
+    public ResponseEntity<CreateProductCategoryViewApiResponse> createProductCategory(String acceptLanguage, CreateProductCategoryViewRequest createProductCategoryViewRequest) {
         CreateProductCategoryViewResponse createProductCategoryViewResponse =
                 productCategoryApiAdapterService.createProductCategory(createProductCategoryViewRequest);
         return ResponseEntity.status(CREATED).body(
-                new ApiSuccessResponse()
+                new CreateProductCategoryViewApiResponse()
                         .code(CREATED.value())
                         .status(CREATED.name())
                         .timestamp(ZonedDateTime.now().toString())
@@ -46,5 +50,20 @@ public class ProductCategoryRestApi implements ProductCategoriesApi {
                         .message(MessageUtil.getMessage(PRODUCT_CATEGORY_CREATED_SUCCESSFULLY, Locale.forLanguageTag(acceptLanguage), ""))
                         .data(Map.of(BODY, createProductCategoryViewResponse))
         );
+    }
+
+    @Override
+    public ResponseEntity<FindProductCategoriesViewApiResponse> findProductCategories(String acceptLanguage, Integer page, Integer size, String attribute, String direction) {
+        return null;
+    }
+
+    @Override
+    public ResponseEntity<FindProductCategoryByIdViewApiResponse> findProductCategoryById(String acceptLanguage, UUID productCategoryId) {
+        return null;
+    }
+
+    @Override
+    public ResponseEntity<SearchProductCategoriesViewApiResponse> searchProductCategory(String acceptLanguage, Integer page, Integer size, String attribute, String direction, String keyword) {
+        return null;
     }
 }
