# farm-byte-service/catalog/catalog-adapter/catalog-adapter-rest-api/src/main/java/cm/xenonbyte/farmbyte/catalog/adapter/rest/api/product/ProductCategoryServiceRestApiAdapter.java
@@ -2,7 +2,12 @@ package cm.xenonbyte.farmbyte.catalog.adapter.rest.api.product;
 
 import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.productcategory.view.CreateProductCategoryViewRequest;
 import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.productcategory.view.CreateProductCategoryViewResponse;
+import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.productcategory.view.FindProductCategoriesPageInfoViewResponse;
+import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.productcategory.view.FindProductCategoryByIdViewResponse;
+import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.productcategory.view.SearchProductCategoriesPageInfoViewResponse;
 import jakarta.annotation.Nonnull;
+
+import java.util.UUID;
 
 /**
  * @author bamk
@@ -11,4 +16,10 @@ import jakarta.annotation.Nonnull;
  */
 public interface ProductCategoryServiceRestApiAdapter {
     @Nonnull CreateProductCategoryViewResponse createProductCategory(@Nonnull CreateProductCategoryViewRequest createProductCategoryViewRequest);
+
+    @Nonnull FindProductCategoryByIdViewResponse findProductCategoryById(UUID productCategoryIdUUID);
+
+    @Nonnull FindProductCategoriesPageInfoViewResponse findProductCategories(int page, int pageSize, String attribute, String direction);
+
+    @Nonnull SearchProductCategoriesPageInfoViewResponse searchProductCategories(int page, int pageSize, String attribute, String direction, String keyword);
 }
